Prevent text overflow for the cart-expired modal popup. Resolves #431.

--- a/brambling/static/brambling/sass/modules/_modals.sass
+++ b/brambling/static/brambling/sass/modules/_modals.sass
@@ -1,2 +1,6 @@
 .modal-title
 	margin-right: $line-height-computed
+
+#countdownCompleteModal
+	a.btn
+		white-space: normal
